Fix static resource include paths

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -22,7 +22,7 @@
         <h3 class="f3">I'm a software and systems engineer from Seattle, WA.</h3>
         <p>I have a passion for software development, system design and automation, and to never stop learning. I take pride in my work, and I strive to create the best possible solution that has lasting value.</p>
         <p>Checkout my résumé for more details about my skillset, or look me up on Github or LinkedIn.</p>
-        <p><a href="{{ .Site.BaseURL }}downloads/resume.pdf">Resume PDF</a></p>
+        <p><a href="{{ .Site.BaseURL }}/downloads/resume.pdf">Resume PDF</a></p>
         <p><a href="https://github.com/Grant1219">https://github.com/Grant1219</a></p>
         <p><a href="https://www.linkedin.com/in/grant-gangi/">https://www.linkedin.com/in/grant-gangi/</a></p>
         <!--
