--- a/layouts/partials/scripts.html
+++ b/layouts/partials/scripts.html
@@ -1,4 +1,4 @@
-<script src="{{ .Site.BaseURL }}js/highlight.min.js"></script>
+<script src="{{ .Site.BaseURL }}/js/highlight.min.js"></script>
 
 <script>
   hljs.initHighlightingOnLoad();
