--- a/layouts/index.html
+++ b/layouts/index.html
@@ -16,10 +16,10 @@
   <body lang="{{ .Site.LanguageCode }}" class="helvetica w-90 w-60-ns center center-ns mv2 mv5-ns">
     <section id="main">
       <div>
-        <h1 id="title" class="f1">
+        <h1 id="title" class="f-subheadline">
           {{ .Site.Title }}
         </h1>
-        <h3 class="f3">I'm a software and systems engineer from Seattle, WA.</h3>
+        <h3 class="f2">I'm a Linux focused software and systems engineer.</h3>
         <p>I have a passion for software development, system design and automation, and to never stop learning. I take pride in my work, and I strive to create the best possible solution that has lasting value.</p>
         <p>Checkout my résumé for more details about my skillset, or look me up on Github or LinkedIn.</p>
         <p><a href="{{ .Site.BaseURL }}/downloads/resume.pdf">Resume PDF</a></p>
@@ -34,6 +34,22 @@
           {{ end }}
         </ul>
         -->
+      </div>
+      <div>
+        <h2 class="f2">Latest Posts</h2>
+        <ul id="list" class="pl0">
+          {{ $latest_posts := first 3 (where site.RegularPages.ByDate.Reverse "Type" "post") }}
+          {{ if gt (len $latest_posts) 0 }}
+          {{ range $latest_posts }}
+          <li class="list pl0 lh-copy">
+            <a class="f3 b dib black no-underline" href="{{ .Permalink}}">{{ .Title }}</a>
+            <span class="f6 gray db dib-ns">{{ .Date.Format "January 2, 2006" }}</span>
+          </li>
+          {{ end }}
+          {{ else }}
+          <p>No posts to display.</p>
+          {{ end }}
+        </ul>
       </div>
     </section>
 
