Reduce more duplication in the templates

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -14,3 +14,4 @@
     {{ partial "head_includes.html" . }}
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
   </head>
+  <body lang="{{ .Site.LanguageCode }}" class="helvetica w-90 w-60-ns center center-ns mv2 mv5-ns">
