--- a/layouts/partials/scripts.html
+++ b/layouts/partials/scripts.html
@@ -1,5 +1,2 @@
 <script src="{{ .Site.BaseURL }}/js/highlight.min.js"></script>
-
-<script>
-  hljs.initHighlightingOnLoad();
-</script>
+<script>hljs.initHighlightingOnLoad();</script>
