--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,6 +1,8 @@
-<footer>
-  <div>
-    <p class="f6 gray mt6 lh-copy">{{ .Site.Copyright  | safeHTML }}</p>
-  </div>
-</footer>
-{{ partial "scripts.html" . }}
+  <footer>
+    <div>
+      <p class="f6 gray mt6 lh-copy">{{ .Site.Copyright  | safeHTML }} - Site last updated {{ dateFormat "January 2, 2006" .Site.LastChange }}</p>
+    </div>
+  </footer>
+  {{ partial "scripts.html" . }}
+  </body>
+</html>
