--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,15 +1,17 @@
 {{ partial "header.html" . }}
 
 {{ $baseurl := .Site.BaseURL }}
-<span class="b">/ </span>
-<a href="{{ .Site.BaseURL  }}" class="b bb bw1 pb1 no-underline black">{{ .Site.Title }}</a>
+<header>
+  <span class="f3 b">/ </span>
+  <a href="{{ .Site.BaseURL  }}" class="f3 b bb bw1 pb1 no-underline black">{{ .Site.Title }}</a>
+</header>
 
-<section id="main" class="mt5">
+<main class="mt5">
   <h1 itemprop="name" id="title">{{ .Title }}</h1>
 
   <article itemprop="articleBody" id="content" class="w-90 lh-copy">
     {{ .Content }}
   </article>
-</section>
+</main>
 
 {{ partial "footer.html" . }}
