--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,9 +1,16 @@
 {{ partial "header.html" . }}
 
+<header class="cf w-100">
+  <div class="fl w-60">
+    <h1 id="title" class="f-subheadline normal mv2">{{ .Site.Title }}</h1>
+  </div>
+  <div class="fr w-40 pv4 tr">
+    <a href="/post" class="f3 b bb bw1 pb1 no-underline black mr3">all posts</a>
+    <a href="/about" class="f3 b bb bw1 pb1 no-underline black mr6">about</a>
+  </div>
+</header>
+
 <main>
-  <h1 id="title" class="f-subheadline normal">
-    {{ .Site.Title }}
-  </h1>
   <h2 class="f2 normal">I'm a Linux focused software and systems engineer.</h2>
   <p>I have a passion for software development, system design and automation, and to never stop learning. I take pride in my work, and I strive to create the best possible solution that has lasting value.</p>
   <p>Checkout my resume for more details about my skillset, or look me up on <a href="https://github.com/Grant1219">Github</a> or <a href="https://www.linkedin.com/in/grant-gangi/">LinkedIn</a>.</p>
