--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,9 +2,9 @@
 
 <header class="cf w-100">
   <div class="fl w-60">
-    <h1 id="title" class="f-subheadline normal mv2">{{ .Site.Title }}</h1>
+    <h1 id="title" class="f-subheadline normal mt0 mb3">{{ .Site.Title }}</h1>
   </div>
-  <div class="fr w-40 pv4 tr">
+  <div class="fl w-40 pv4 tr">
     <a href="/post" class="f3 b bb bw1 pb1 no-underline black mr3">all posts</a>
     <a href="/about" class="f3 b bb bw1 pb1 no-underline black mr6">about</a>
   </div>
