--- a/layouts/taxonomy/series.html
+++ b/layouts/taxonomy/series.html
@@ -1,12 +1,18 @@
 {{ partial "header.html" . }}
 
-<header>
-  <span class="b">/ </span>
-  <a href="{{ .Site.BaseURL  }}" class="b bw1 bb pb1 no-underline black">{{ .Site.Title  }}</a>
-  <span class="b"> / </span>
-  <a href="/series" class="b bw1 bb pb1 no-underline black">series</a>
-  <span class="b"> / </span>
-  <span class="b pb1 no-underline black">{{ .Title | lower }}</span>
+<header class="cf w-100">
+  <div class="fl w-60 pv4">
+    <span class="f3 b">/ </span>
+    <a href="{{ .Site.BaseURL  }}" class="f3 b bw1 bb pb1 no-underline black">{{ .Site.Title  }}</a>
+    <span class="f3 b"> / </span>
+    <a href="/series" class="f3 b bw1 bb pb1 no-underline black">categories</a>
+    <span class="f3 b"> / </span>
+    <span class="f3 b pb1 no-underline black">{{ .Title | lower }}</span>
+  </div>
+  <div class="fl w-40 pv4 tr">
+    <a href="/post" class="f3 b bb bw1 pb1 no-underline black mr3">all posts</a>
+    <a href="/about" class="f3 b bb bw1 pb1 no-underline black mr6">about</a>
+  </div>
 </header>
 
 <main class="mt5">
