Add first post and setup Disqus comments
Started writing the first post for the website, I think it's mostly
done... also apparently Hugo has built-ins for enabling Disqus comments,
so I will see if those work once I deploy the website.

--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -52,6 +52,8 @@
       </section>
     {{ end }}
 
+    <h3 class="f3">Comments</h3>
+    {{ template "_internal/disqus.html" . }}
 </main>
 
 {{ partial "footer.html" . }}
