Fix hugo complaints

--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -1,6 +1,6 @@
   <footer>
     <div>
-      <p class="f6 gray mt6 lh-copy">{{ .Site.Copyright  | safeHTML }} - Site last updated {{ dateFormat "January 2, 2006" .Site.LastChange }}</p>
+      <p class="f6 gray mt6 lh-copy">{{ .Site.Copyright  | safeHTML }} - Site last updated {{ dateFormat "January 2, 2006" .Site.Lastmod }}</p>
     </div>
   </footer>
   {{ partial "scripts.html" . }}
